--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <style>
         #thermometer .title {
-            font-size: 20px;
+            font-size: 40px;
             margin-top: 0;
             text-align: center
         }
@@ -126,7 +126,7 @@
         <div class="track">
             <div class="goal">
                 <!-- edit here -->
-                <div class="amount">2,000</div>
+                <div class="amount">2000</div>
             </div>
             <div class="progress" style="height: 0.6%;">
                 <div class="amount" style="border-top: 1px solid;">24</div>
@@ -139,7 +139,7 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script>function formatInterger(n, c, d, t) { "use strict"; var s, i, j; c = isNaN(c = Math.abs(c)) ? 2 : c; d = d === undefined ? "." : d; t = t === undefined ? "," : t; s = n < 0 ? "-" : ""; i = parseInt(n = Math.abs(+n || 0).toFixed(c), 10) + ""; j = (j = i.length) > 3 ? j % 3 : 0; return s + (j ? i.substr(0, j) + t : "") + i.substr(j).replace(/(\d{3})(?=\d)/g, "$1" + t) + (c ? d + Math.abs(n - i).toFixed(c).slice(2) : ""); } function thermometer(goalAmount, progressAmount, animate) { "use strict"; var $thermo = $("#thermometer"); var $progress = $(".progress", $thermo); var $goal = $(".goal", $thermo); var percentageAmount; goalAmount = goalAmount || parseFloat($goal.text().replace(/,/g, "")); progressAmount = progressAmount || parseFloat($progress.text().replace(/,/g, "")); percentageAmount = Math.min(Math.round(progressAmount / goalAmount * 1000) / 10, 100); $goal.find(".amount").text(formatInterger(goalAmount)); $progress.find(".amount").text(formatInterger(progressAmount)); $progress.find(".amount").hide(); if (animate !== false) { $progress.animate({ "height": percentageAmount + "%" }, 1200, function () { $(this).find(".amount").fadeIn(500); }); } else { $progress.css({ "height": percentageAmount + "%" }); $progress.find(".amount").fadeIn(500); } } jQuery(document).ready(function () { thermometer(); });</script>
+    <script>function formatInterger(n, c, d, t) { "use strict"; var s, i, j; c = isNaN(c = Math.abs(c)) ? 2 : c; d = d === undefined ? "" : d; t = t === undefined ? "," : t; s = n < 0 ? "-" : ""; i = parseInt(n = Math.abs(+n || 0).toFixed(0), 10) + ""; j = (j = i.length) > 3 ? j % 3 : 0; return s + (j ? i.substr(0, j) + t : "") + i.substr(j).replace(/(\d{3})(?=\d)/g, "1" + t) + (c ? d + Math.abs(n - i).toFixed(0).slice(2) : ""); } function thermometer(goalAmount, progressAmount, animate) { "use strict"; var $thermo = $("#thermometer"); var $progress = $(".progress", $thermo); var $goal = $(".goal", $thermo); var percentageAmount; goalAmount = goalAmount || parseFloat($goal.text().replace(/,/g, "")); progressAmount = progressAmount || parseFloat($progress.text().replace(/,/g, "")); percentageAmount = Math.min(Math.round(progressAmount / goalAmount * 1000) / 10, 100); $goal.find(".amount").text(formatInterger(goalAmount)); $progress.find(".amount").text(formatInterger(progressAmount)); $progress.find(".amount").hide(); if (animate !== false) { $progress.animate({ "height": percentageAmount + "%" }, 1200, function () { $(this).find(".amount").fadeIn(500); }); } else { $progress.css({ "height": percentageAmount + "%" }); $progress.find(".amount").fadeIn(500); } } jQuery(document).ready(function () { thermometer(); });</script>
 </body>
 
 </html>
